[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/FloorAndMap/door.png" type="Texture" id=1]
[ext_resource path="res://Door/Door.gd" type="Script" id=2]
[ext_resource path="res://Assets/Jay/jay_door.png" type="Texture" id=3]
[ext_resource path="res://Assets/Font/RussoOne-Regular.ttf" type="DynamicFontData" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 19.0263

[sub_resource type="Animation" id=2]
resource_name = "exitScreen"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -800 ) ]
}

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 3 )

[node name="Door" type="KinematicBody2D" groups=["Object"]]
rotation = 4.71239
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.45, 0.35 )
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 8, -4, 8, 3, -7, 3, -7, -4 )

[node name="Jay" type="Sprite" parent="."]
position = Vector2( 9, -47 )
rotation = 1.5708
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/exitScreen = SubResource( 2 )

[node name="Help Me!" type="Label" parent="."]
margin_left = 12.0
margin_top = -51.0
margin_right = 247.0
margin_bottom = 10.0
rect_rotation = 90.0
rect_scale = Vector2( 0.03, 0.03 )
theme = SubResource( 4 )
text = "Help me!!"

[node name="DialogueTimer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="DialogueTimer" to="." method="_on_DialogueTimer_timeout"]
